Fix app container being too close to the bottom

--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,12 @@
 body {
 	background-color: lightgray;
-	justify-content: center;
 }
 
 .app {
+	height: 100%;
 	position: fixed;
 	top: 0px;
+	bottom: 0px;
 	right: 330px;
 	width: 55%;
 	background-color: white;
@@ -14,7 +15,7 @@ body {
 
 #root > h1 {
 	font-size: 1.5em;
-	margin: 92px 482px;
+	margin: 80px 482px;
 }
 
 /* Fix the upload item list next */
